--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -13,6 +13,7 @@ body {
 // Customize the menubar color
 .ui.menu {
   // background: $background-start;
+  background-color: #C1E1C1;
 }
 
 // Customize the home page icon colors
